Update to 1.17, fix github
Should now have the most recent version