@@ -1,31 +1,21 @@
 package net.cosmicparticl.tidesofthedream.item;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
-import net.minecraft.block.NetherrackBlock;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.effect.StatusEffectInstance;
-import net.minecraft.entity.effect.StatusEffects;
 import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.projectile.WitherSkullEntity;
-import net.minecraft.entity.projectile.thrown.EnderPearlEntity;
 import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
 import net.minecraft.item.ItemUsageContext;
 import net.minecraft.sound.SoundCategory;
 import net.minecraft.sound.SoundEvents;
 import net.minecraft.util.ActionResult;
-import net.minecraft.util.Hand;
-import net.minecraft.util.TypedActionResult;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
 
 import java.util.HashMap;
-import java.util.Set;
+import java.util.Map;
 
 public class hellflute extends Item {
     public hellflute(Settings settings) {
@@ -42,7 +32,7 @@ public class hellflute extends Item {
         BlockState blockState = (BlockState)REPLACEBLOCKS.get(world.getBlockState(blockPos).getBlock());
         if (blockState != null) {
             PlayerEntity playerEntity = context.getPlayer();
-            world.playSound(playerEntity, blockPos, SoundEvents.BLOCK_NYLIUM_PLACE, SoundCategory.BLOCKS, 1.0F, 1.0F);
+            world.playSound(playerEntity, blockPos, SoundEvents.BLOCK_NYLIUM_PLACE, SoundCategory.BLOCKS, 1.0F, 1.0F/ (world.getRandom().nextFloat() * 0.4F + 0.8F));
           if (!world.isClient)
                 {
                     world.setBlockState(blockPos, blockState);
@@ -53,7 +43,7 @@ public class hellflute extends Item {
     }
     static {
 
-        REPLACEBLOCKS = Maps.newHashMap(ImmutableMap.of(Blocks.GRASS_BLOCK, Blocks.NETHERRACK.getDefaultState(),Blocks.PODZOL, Blocks.WARPED_NYLIUM.getDefaultState(), Blocks.DIRT, Blocks.NETHERRACK.getDefaultState(), Blocks.COARSE_DIRT, Blocks.SOUL_SOIL.getDefaultState(),Blocks.MYCELIUM, Blocks.CRIMSON_NYLIUM.getDefaultState()));
+        REPLACEBLOCKS = Maps.newHashMap(Map.of(Blocks.GRASS_BLOCK, Blocks.NETHERRACK.getDefaultState(),Blocks.PODZOL, Blocks.WARPED_NYLIUM.getDefaultState(), Blocks.DIRT, Blocks.NETHERRACK.getDefaultState(), Blocks.COARSE_DIRT, Blocks.SOUL_SOIL.getDefaultState(),Blocks.MYCELIUM, Blocks.CRIMSON_NYLIUM.getDefaultState(),Blocks.STONE, Blocks.BLACKSTONE.getDefaultState(),Blocks.SAND, Blocks.SOUL_SAND.getDefaultState()));
     }
 }
 
